--- a/projects/client/src/index.html
+++ b/projects/client/src/index.html
@@ -21,12 +21,11 @@
       return true;
     };
   </script>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
-  <div style="padding: 20px; background-color: #f8f9fa; border: 1px solid #ddd; margin: 20px;">
-    <h2>OptiRoute Client App</h2>
-    <p>If you see this message, the application HTML is loading but the Angular application might not be initializing properly.</p>
-  </div>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
