--- a/projects/admin/src/index.html
+++ b/projects/admin/src/index.html
@@ -17,6 +17,14 @@
     }
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnsVzHUKFmzMl62YcJh2xOhtjeS6Z5T-U&libraries=places&callback=initGoogleMaps&v=weekly&loading=async" defer></script>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
