--- a/projects/admin/src/index.html
+++ b/projects/admin/src/index.html
@@ -6,6 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <!-- Google Maps JavaScript API - Optimized loading -->
   <script>
     // Define callback function for when Maps API is fully loaded
@@ -17,6 +21,8 @@
     }
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnsVzHUKFmzMl62YcJh2xOhtjeS6Z5T-U&libraries=places&callback=initGoogleMaps&v=weekly&loading=async" defer></script>
+  <!-- Bootstrap JS Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
