--- a/projects/client/src/index.html
+++ b/projects/client/src/index.html
@@ -6,6 +6,20 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <!-- Apple iOS PWA Support -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="Around Noon">
+  
+  <!-- Apple Touch Icons -->
+  <link rel="apple-touch-icon" sizes="48x48" href="icons/android-launchericon-48-48.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="icons/android-launchericon-72-72.png">
+  <link rel="apple-touch-icon" sizes="96x96" href="icons/android-launchericon-96-96.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="icons/android-launchericon-144-144.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="icons/android-launchericon-192-192.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="icons/android-launchericon-512-512.png">
+  
   <script>
     console.log('Client index.html loaded');
     
