safari javascript issues fixed

--- a/projects/client/src/index.html
+++ b/projects/client/src/index.html
@@ -118,6 +118,10 @@
   </script>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <!-- iOS Safari nomodule polyfill -->
+  <script>
+    !function(){var e=document,t=e.createElement("script");if(!("noModule"in t)&&"onbeforeload"in t){var n=!1;e.addEventListener("beforeload",function(e){if(e.target===t)n=!0;else if(!e.target.hasAttribute("nomodule")||!n)return;e.preventDefault()},!0),t.type="module",t.src=".",e.head.appendChild(t),t.remove()}}();
+  </script>
 </head>
 <body>
   <app-root></app-root>
